@@ -936,75 +936,3 @@ void XETSwNoOperation(xReq *data)
 {
     /* noop -- don't do anything */
 }
-
-/* Byte swap a list of longs */
-#if defined vms && !defined MITR5
-#ifndef LINKED_IN
-void SwapLongs ( register long *list, register unsigned long count)
-{
-    register char n;
-
-    while (count >= 8) {
-        swapl(list+0, n);
-        swapl(list+1, n);
-        swapl(list+2, n);
-        swapl(list+3, n);
-        swapl(list+4, n);
-        swapl(list+5, n);
-        swapl(list+6, n);
-        swapl(list+7, n);
-        list += 8;
-        count -= 8;
-    }
-    if (count != 0) {
-        do {
-        swapl(list, n);
-        list++;
-        } while (--count != 0);
-    }
-}
-
-/* Byte swap a list of shorts */
-
-void SwapShorts (register short *list, register unsigned long count)
-{
-    register char n;
-
-    while (count >= 16) {
-        swaps(list+0, n);
-        swaps(list+1, n);
-        swaps(list+2, n);
-        swaps(list+3, n);
-        swaps(list+4, n);
-        swaps(list+5, n);
-        swaps(list+6, n);
-        swaps(list+7, n);
-        swaps(list+8, n);
-        swaps(list+9, n);
-        swaps(list+10, n);
-        swaps(list+11, n);
-        swaps(list+12, n);
-        swaps(list+13, n);
-        swaps(list+14, n);
-        swaps(list+15, n);
-        list += 16;
-        count -= 16;
-    }
-    if (count != 0) {
-        do {
-        swaps(list, n);
-        list++;
-        } while (--count != 0);
-    }
-}
-
-SwapColorItem(xColorItem *pItem)
-{
-    register char n;
-    swapl(&pItem->pixel, n);
-    swaps(&pItem->red, n);
-    swaps(&pItem->green, n);
-    swaps(&pItem->blue, n);
-}
-#endif /* LINKED_IN */
-#endif /* vms */
